@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-GitHub
 
 {{$NEXT}}
+  - better diagnostics when [GitHub::Update] encounters permission errors
 
 0.48      2021-02-20 22:19:08Z
 
